sandbox/graphblas/GraphBLAS.h


typedef uint64_t GrB_Index ;
typedef enum
{
    GrB_SUCCESS = 0,            
    GrB_NO_VALUE = 1,           
    GxB_EXHAUSTED = 2,          
    GrB_UNINITIALIZED_OBJECT = -1,  
    GrB_NULL_POINTER = -2,          
    GrB_INVALID_VALUE = -3,         
    GrB_INVALID_INDEX = -4,         
    GrB_DOMAIN_MISMATCH = -5,       
    GrB_DIMENSION_MISMATCH = -6,    
    GrB_OUTPUT_NOT_EMPTY = -7,      
    GrB_NOT_IMPLEMENTED = -8,       
    GrB_PANIC = -101,               
    GrB_OUT_OF_MEMORY = -102,       
    GrB_INSUFFICIENT_SPACE = -103,  
    GrB_INVALID_OBJECT = -104,      
    GrB_INDEX_OUT_OF_BOUNDS = -105, 
    GrB_EMPTY_OBJECT = -106         
}
GrB_Info ;
typedef struct GB_Type_opaque *GrB_Type ;
typedef struct GB_BinaryOp_opaque *GrB_BinaryOp ;
typedef struct GB_Scalar_opaque *GrB_Scalar ;   
extern
GrB_Info GrB_Scalar_setElement_BOOL     
(
    GrB_Scalar s,                       
    bool x                              
) ;
extern
GrB_Info GrB_Scalar_setElement_INT8     
(
    GrB_Scalar s,                       
    int8_t x                            
) ;
extern
GrB_Info GrB_Scalar_setElement_UINT8    
(
    GrB_Scalar s,                       
    uint8_t x                           
) ;
extern
GrB_Info GrB_Scalar_setElement_INT16    
(
    GrB_Scalar s,                       
    int16_t x                           
) ;
extern
GrB_Info GrB_Scalar_setElement_UINT16   
(
    GrB_Scalar s,                       
    uint16_t x                          
) ;
extern
GrB_Info GrB_Scalar_setElement_INT32    
(
    GrB_Scalar s,                       
    int32_t x                           
) ;
extern
GrB_Info GrB_Scalar_setElement_UINT32   
(
    GrB_Scalar s,                       
    uint32_t x                          
) ;
extern
GrB_Info GrB_Scalar_setElement_INT64    
(
    GrB_Scalar s,                       
    int64_t x                           
) ;
extern
GrB_Info GrB_Scalar_setElement_UINT64   
(
    GrB_Scalar s,                       
    uint64_t x                          
) ;
extern
GrB_Info GrB_Scalar_setElement_FP32     
(
    GrB_Scalar s,                       
    float x                             
) ;
extern
GrB_Info GrB_Scalar_setElement_FP64     
(
    GrB_Scalar s,                       
    double x                            
) ;
extern
GrB_Info GxB_Scalar_setElement_FC32     
(
    GrB_Scalar s,                       
    GxB_FC32_t x                        
) ;
extern
GrB_Info GxB_Scalar_setElement_FC64     
(
    GrB_Scalar s,                       
    GxB_FC64_t x                        
) ;
extern
GrB_Info GrB_Scalar_setElement_UDT      
(
    GrB_Scalar s,                       
    void *x                             
) ;
extern GrB_Info GxB_Scalar_setElement_BOOL   (GrB_Scalar s, bool     x) ;
extern GrB_Info GxB_Scalar_setElement_INT8   (GrB_Scalar s, int8_t   x) ;
extern GrB_Info GxB_Scalar_setElement_INT16  (GrB_Scalar s, int16_t  x) ;
extern GrB_Info GxB_Scalar_setElement_INT32  (GrB_Scalar s, int32_t  x) ;
extern GrB_Info GxB_Scalar_setElement_INT64  (GrB_Scalar s, int64_t  x) ;
extern GrB_Info GxB_Scalar_setElement_UINT8  (GrB_Scalar s, uint8_t  x) ;
extern GrB_Info GxB_Scalar_setElement_UINT16 (GrB_Scalar s, uint16_t x) ;
extern GrB_Info GxB_Scalar_setElement_UINT32 (GrB_Scalar s, uint32_t x) ;
extern GrB_Info GxB_Scalar_setElement_UINT64 (GrB_Scalar s, uint64_t x) ;
extern GrB_Info GxB_Scalar_setElement_FP32   (GrB_Scalar s, float    x) ;
extern GrB_Info GxB_Scalar_setElement_FP64   (GrB_Scalar s, double   x) ;
extern GrB_Info GxB_Scalar_setElement_UDT    (GrB_Scalar s, void    *x) ;
extern
GrB_Info GrB_Scalar_extractElement_BOOL     
(
    bool *x,                        
    const GrB_Scalar s              
) ;
extern
GrB_Info GrB_Scalar_extractElement_INT8     
(
    int8_t *x,                      
    const GrB_Scalar s              
) ;
extern
GrB_Info GrB_Scalar_extractElement_UINT8    
(
    uint8_t *x,                     
    const GrB_Scalar s              
) ;
extern
GrB_Info GrB_Scalar_extractElement_INT16    
(
    int16_t *x,                     
    const GrB_Scalar s              
) ;
extern
GrB_Info GrB_Scalar_extractElement_UINT16   
(
    uint16_t *x,                    
    const GrB_Scalar s              
) ;
extern
GrB_Info GrB_Scalar_extractElement_INT32    
(
    int32_t *x,                     
    const GrB_Scalar s              
) ;
extern
GrB_Info GrB_Scalar_extractElement_UINT32   
(
    uint32_t *x,                    
    const GrB_Scalar s              
) ;
extern
GrB_Info GrB_Scalar_extractElement_INT64    
(
    int64_t *x,                     
    const GrB_Scalar s              
) ;
extern
GrB_Info GrB_Scalar_extractElement_UINT64   
(
    uint64_t *x,                    
    const GrB_Scalar s              
) ;
extern
GrB_Info GrB_Scalar_extractElement_FP32     
(
    float *x,                       
    const GrB_Scalar s              
) ;
extern
GrB_Info GrB_Scalar_extractElement_FP64     
(
    double *x,                      
    const GrB_Scalar s              
) ;
extern
GrB_Info GxB_Scalar_extractElement_FC32     
(
    GxB_FC32_t *x,                  
    const GrB_Scalar s              
) ;
extern
GrB_Info GxB_Scalar_extractElement_FC64     
(
    GxB_FC64_t *x,                  
    const GrB_Scalar s              
) ;
extern
GrB_Info GrB_Scalar_extractElement_UDT      
(
    void *x,                        
    const GrB_Scalar s              
) ;
extern GrB_Info GxB_Scalar_extractElement_BOOL   (bool     *x, const GrB_Scalar s) ;
extern GrB_Info GxB_Scalar_extractElement_INT8   (int8_t   *x, const GrB_Scalar s) ;
extern GrB_Info GxB_Scalar_extractElement_INT16  (int16_t  *x, const GrB_Scalar s) ;
extern GrB_Info GxB_Scalar_extractElement_INT32  (int32_t  *x, const GrB_Scalar s) ;
extern GrB_Info GxB_Scalar_extractElement_INT64  (int64_t  *x, const GrB_Scalar s) ;
extern GrB_Info GxB_Scalar_extractElement_UINT8  (uint8_t  *x, const GrB_Scalar s) ;
extern GrB_Info GxB_Scalar_extractElement_UINT16 (uint16_t *x, const GrB_Scalar s) ;
extern GrB_Info GxB_Scalar_extractElement_UINT32 (uint32_t *x, const GrB_Scalar s) ;
extern GrB_Info GxB_Scalar_extractElement_UINT64 (uint64_t *x, const GrB_Scalar s) ;
extern GrB_Info GxB_Scalar_extractElement_FP32   (float    *x, const GrB_Scalar s) ;
extern GrB_Info GxB_Scalar_extractElement_FP64   (double   *x, const GrB_Scalar s) ;
extern GrB_Info GxB_Scalar_extractElement_UDT    (void     *x, const GrB_Scalar s) ;
typedef struct GB_Vector_opaque *GrB_Vector ;
extern
GrB_Info GrB_Vector_new     
(
    GrB_Vector *v,          
    GrB_Type type,          
    GrB_Index n             
) ;
extern
GrB_Info GrB_Vector_dup     
(
    GrB_Vector *w,          
    const GrB_Vector u      
) ;
extern
GrB_Info GrB_Vector_clear   
(                           
    GrB_Vector v            
) ;
extern
GrB_Info GrB_Vector_size    
(
    GrB_Index *n,           
    const GrB_Vector v      
) ;
extern
GrB_Info GrB_Vector_nvals   
(
    GrB_Index *nvals,       
    const GrB_Vector v      
) ;
extern
GrB_Info GxB_Vector_type    
(
    GrB_Type *type,         
    const GrB_Vector v      
) ;
extern
GrB_Info GxB_Vector_type_name      
(
    char *type_name,        
    const GrB_Vector v      
) ;
extern
GrB_Info GxB_Vector_memoryUsage  
(
    size_t *size,           
    const GrB_Vector v      
) ;
extern
GrB_Info GxB_Vector_iso     
(
    bool *iso,              
    const GrB_Vector v      
) ;
extern
GrB_Info GrB_Vector_free    
(
    GrB_Vector *v           
) ;
extern
GrB_Info GrB_Vector_build_BOOL      
(
    GrB_Vector w,                   
    const GrB_Index *I,             
    const bool *X,                  
    GrB_Index nvals,                
    const GrB_BinaryOp dup          
) ;
extern
GrB_Info GrB_Vector_build_INT8      
(
    GrB_Vector w,                   
    const GrB_Index *I,             
    const int8_t *X,                
    GrB_Index nvals,                
    const GrB_BinaryOp dup          
) ;
extern
GrB_Info GrB_Vector_build_UINT8     
(
    GrB_Vector w,                   
    const GrB_Index *I,             
    const uint8_t *X,               
    GrB_Index nvals,                
    const GrB_BinaryOp dup          
) ;
extern
GrB_Info GrB_Vector_build_INT16     
(
    GrB_Vector w,                   
    const GrB_Index *I,             
    const int16_t *X,               
    GrB_Index nvals,                
    const GrB_BinaryOp dup          
) ;
extern
GrB_Info GrB_Vector_build_UINT16    
(
    GrB_Vector w,                   
    const GrB_Index *I,             
    const uint16_t *X,              
    GrB_Index nvals,                
    const GrB_BinaryOp dup          
) ;
extern
GrB_Info GrB_Vector_build_INT32     
(
    GrB_Vector w,                   
    const GrB_Index *I,             
    const int32_t *X,               
    GrB_Index nvals,                
    const GrB_BinaryOp dup          
) ;
extern
GrB_Info GrB_Vector_build_UINT32    
(
    GrB_Vector w,                   
    const GrB_Index *I,             
    const uint32_t *X,              
    GrB_Index nvals,                
    const GrB_BinaryOp dup          
) ;
extern
GrB_Info GrB_Vector_build_INT64     
(
    GrB_Vector w,                   
    const GrB_Index *I,             
    const int64_t *X,               
    GrB_Index nvals,                
    const GrB_BinaryOp dup          
) ;
extern
GrB_Info GrB_Vector_build_UINT64    
(
    GrB_Vector w,                   
    const GrB_Index *I,             
    const uint64_t *X,              
    GrB_Index nvals,                
    const GrB_BinaryOp dup          
) ;
extern
GrB_Info GrB_Vector_build_FP32      
(
    GrB_Vector w,                   
    const GrB_Index *I,             
    const float *X,                 
    GrB_Index nvals,                
    const GrB_BinaryOp dup          
) ;
extern
GrB_Info GrB_Vector_build_FP64      
(
    GrB_Vector w,                   
    const GrB_Index *I,             
    const double *X,                
    GrB_Index nvals,                
    const GrB_BinaryOp dup          
) ;
extern
GrB_Info GxB_Vector_build_FC32      
(
    GrB_Vector w,                   
    const GrB_Index *I,             
    const GxB_FC32_t *X,            
    GrB_Index nvals,                
    const GrB_BinaryOp dup          
) ;
extern
GrB_Info GxB_Vector_build_FC64      
(
    GrB_Vector w,                   
    const GrB_Index *I,             
    const GxB_FC64_t *X,            
    GrB_Index nvals,                
    const GrB_BinaryOp dup          
) ;
extern
GrB_Info GrB_Vector_build_UDT       
(
    GrB_Vector w,                   
    const GrB_Index *I,             
    const void *X,                  
    GrB_Index nvals,                
    const GrB_BinaryOp dup          
) ;
extern
GrB_Info GxB_Vector_build_Scalar    
(
    GrB_Vector w,                   
    const GrB_Index *I,             
    GrB_Scalar scalar,              
    GrB_Index nvals                 
) ;
extern
GrB_Info GrB_Vector_setElement_BOOL     
(
    GrB_Vector w,                       
    bool x,                             
    GrB_Index i                         
) ;
extern
GrB_Info GrB_Vector_setElement_INT8     
(
    GrB_Vector w,                       
    int8_t x,                           
    GrB_Index i                         
) ;
extern
GrB_Info GrB_Vector_setElement_UINT8    
(
    GrB_Vector w,                       
    uint8_t x,                          
    GrB_Index i                         
) ;
extern
GrB_Info GrB_Vector_setElement_INT16    
(
    GrB_Vector w,                       
    int16_t x,                          
    GrB_Index i                         
) ;
extern
GrB_Info GrB_Vector_setElement_UINT16   
(
    GrB_Vector w,                       
    uint16_t x,                         
    GrB_Index i                         
) ;
extern
GrB_Info GrB_Vector_setElement_INT32    
(
    GrB_Vector w,                       
    int32_t x,                          
    GrB_Index i                         
) ;
extern
GrB_Info GrB_Vector_setElement_UINT32   
(
    GrB_Vector w,                       
    uint32_t x,                         
    GrB_Index i                         
) ;
extern
GrB_Info GrB_Vector_setElement_INT64    
(
    GrB_Vector w,                       
    int64_t x,                          
    GrB_Index i                         
) ;
extern
GrB_Info GrB_Vector_setElement_UINT64   
(
    GrB_Vector w,                       
    uint64_t x,                         
    GrB_Index i                         
) ;
extern
GrB_Info GrB_Vector_setElement_FP32     
(
    GrB_Vector w,                       
    float x,                            
    GrB_Index i                         
) ;
extern
GrB_Info GrB_Vector_setElement_FP64     
(
    GrB_Vector w,                       
    double x,                           
    GrB_Index i                         
) ;
extern
GrB_Info GxB_Vector_setElement_FC32     
(
    GrB_Vector w,                       
    GxB_FC32_t x,                       
    GrB_Index i                         
) ;
extern
GrB_Info GxB_Vector_setElement_FC64     
(
    GrB_Vector w,                       
    GxB_FC64_t x,                       
    GrB_Index i                         
) ;
extern
GrB_Info GrB_Vector_setElement_UDT      
(
    GrB_Vector w,                       
    void *x,                            
    GrB_Index i                         
) ;
extern
GrB_Info GrB_Vector_setElement_Scalar   
(
    GrB_Vector w,                       
    GrB_Scalar x,                       
    GrB_Index i                         
) ;