Packages_2024/graphblas_7.4.0/fp_graphblas.pas


function GrB_Scalar_setElement_BOOL(s: TGrB_Scalar; x: boolean): TGrB_Info; cdecl; external libgraphblas;
function GrB_Scalar_setElement_INT8(s: TGrB_Scalar; x: Tint8_t): TGrB_Info; cdecl; external libgraphblas;
function GrB_Scalar_setElement_UINT8(s: TGrB_Scalar; x: Tuint8_t): TGrB_Info; cdecl; external libgraphblas;
function GrB_Scalar_setElement_INT16(s: TGrB_Scalar; x: Tint16_t): TGrB_Info; cdecl; external libgraphblas;
function GrB_Scalar_setElement_UINT16(s: TGrB_Scalar; x: Tuint16_t): TGrB_Info; cdecl; external libgraphblas;
function GrB_Scalar_setElement_INT32(s: TGrB_Scalar; x: Tint32_t): TGrB_Info; cdecl; external libgraphblas;
function GrB_Scalar_setElement_UINT32(s: TGrB_Scalar; x: Tuint32_t): TGrB_Info; cdecl; external libgraphblas;
function GrB_Scalar_setElement_INT64(s: TGrB_Scalar; x: Tint64_t): TGrB_Info; cdecl; external libgraphblas;
function GrB_Scalar_setElement_UINT64(s: TGrB_Scalar; x: Tuint64_t): TGrB_Info; cdecl; external libgraphblas;
function GrB_Scalar_setElement_FP32(s: TGrB_Scalar; x: single): TGrB_Info; cdecl; external libgraphblas;
function GrB_Scalar_setElement_FP64(s: TGrB_Scalar; x: double): TGrB_Info; cdecl; external libgraphblas;
function GxB_Scalar_setElement_FC32(s: TGrB_Scalar; x: TGxB_FC32_t): TGrB_Info; cdecl; external libgraphblas;
function GxB_Scalar_setElement_FC64(s: TGrB_Scalar; x: TGxB_FC64_t): TGrB_Info; cdecl; external libgraphblas;
function GrB_Scalar_setElement_UDT(s: TGrB_Scalar; x: pointer): TGrB_Info; cdecl; external libgraphblas;
function GxB_Scalar_setElement_BOOL(s: TGrB_Scalar; x: boolean): TGrB_Info; cdecl; external libgraphblas;
function GxB_Scalar_setElement_INT8(s: TGrB_Scalar; x: Tint8_t): TGrB_Info; cdecl; external libgraphblas;
function GxB_Scalar_setElement_INT16(s: TGrB_Scalar; x: Tint16_t): TGrB_Info; cdecl; external libgraphblas;
function GxB_Scalar_setElement_INT32(s: TGrB_Scalar; x: Tint32_t): TGrB_Info; cdecl; external libgraphblas;
function GxB_Scalar_setElement_INT64(s: TGrB_Scalar; x: Tint64_t): TGrB_Info; cdecl; external libgraphblas;
function GxB_Scalar_setElement_UINT8(s: TGrB_Scalar; x: Tuint8_t): TGrB_Info; cdecl; external libgraphblas;
function GxB_Scalar_setElement_UINT16(s: TGrB_Scalar; x: Tuint16_t): TGrB_Info; cdecl; external libgraphblas;
function GxB_Scalar_setElement_UINT32(s: TGrB_Scalar; x: Tuint32_t): TGrB_Info; cdecl; external libgraphblas;
function GxB_Scalar_setElement_UINT64(s: TGrB_Scalar; x: Tuint64_t): TGrB_Info; cdecl; external libgraphblas;
function GxB_Scalar_setElement_FP32(s: TGrB_Scalar; x: single): TGrB_Info; cdecl; external libgraphblas;
function GxB_Scalar_setElement_FP64(s: TGrB_Scalar; x: double): TGrB_Info; cdecl; external libgraphblas;
function GxB_Scalar_setElement_UDT(s: TGrB_Scalar; x: pointer): TGrB_Info; cdecl; external libgraphblas;

function GrB_Scalar_extractElement_BOOL(x: PBoolean; s: TGrB_Scalar): TGrB_Info; cdecl; external libgraphblas;
function GrB_Scalar_extractElement_INT8(x: Pint8_t; s: TGrB_Scalar): TGrB_Info; cdecl; external libgraphblas;
function GrB_Scalar_extractElement_UINT8(x: Puint8_t; s: TGrB_Scalar): TGrB_Info; cdecl; external libgraphblas;
function GrB_Scalar_extractElement_INT16(x: Pint16_t; s: TGrB_Scalar): TGrB_Info; cdecl; external libgraphblas;
function GrB_Scalar_extractElement_UINT16(x: Puint16_t; s: TGrB_Scalar): TGrB_Info; cdecl; external libgraphblas;
function GrB_Scalar_extractElement_INT32(x: Pint32_t; s: TGrB_Scalar): TGrB_Info; cdecl; external libgraphblas;
function GrB_Scalar_extractElement_UINT32(x: Puint32_t; s: TGrB_Scalar): TGrB_Info; cdecl; external libgraphblas;
function GrB_Scalar_extractElement_INT64(x: Pint64_t; s: TGrB_Scalar): TGrB_Info; cdecl; external libgraphblas;
function GrB_Scalar_extractElement_UINT64(x: Puint64_t; s: TGrB_Scalar): TGrB_Info; cdecl; external libgraphblas;
function GrB_Scalar_extractElement_FP32(x: Psingle; s: TGrB_Scalar): TGrB_Info; cdecl; external libgraphblas;
function GrB_Scalar_extractElement_FP64(x: Pdouble; s: TGrB_Scalar): TGrB_Info; cdecl; external libgraphblas;
function GxB_Scalar_extractElement_FC32(x: PGxB_FC32_t; s: TGrB_Scalar): TGrB_Info; cdecl; external libgraphblas;
function GxB_Scalar_extractElement_FC64(x: PGxB_FC64_t; s: TGrB_Scalar): TGrB_Info; cdecl; external libgraphblas;
function GrB_Scalar_extractElement_UDT(x: pointer; s: TGrB_Scalar): TGrB_Info; cdecl; external libgraphblas;
function GxB_Scalar_extractElement_BOOL(x: PBoolean; s: TGrB_Scalar): TGrB_Info; cdecl; external libgraphblas;
function GxB_Scalar_extractElement_INT8(x: Pint8_t; s: TGrB_Scalar): TGrB_Info; cdecl; external libgraphblas;
function GxB_Scalar_extractElement_INT16(x: Pint16_t; s: TGrB_Scalar): TGrB_Info; cdecl; external libgraphblas;
function GxB_Scalar_extractElement_INT32(x: Pint32_t; s: TGrB_Scalar): TGrB_Info; cdecl; external libgraphblas;
function GxB_Scalar_extractElement_INT64(x: Pint64_t; s: TGrB_Scalar): TGrB_Info; cdecl; external libgraphblas;
function GxB_Scalar_extractElement_UINT8(x: Puint8_t; s: TGrB_Scalar): TGrB_Info; cdecl; external libgraphblas;
function GxB_Scalar_extractElement_UINT16(x: Puint16_t; s: TGrB_Scalar): TGrB_Info; cdecl; external libgraphblas;
function GxB_Scalar_extractElement_UINT32(x: Puint32_t; s: TGrB_Scalar): TGrB_Info; cdecl; external libgraphblas;
function GxB_Scalar_extractElement_UINT64(x: Puint64_t; s: TGrB_Scalar): TGrB_Info; cdecl; external libgraphblas;
function GxB_Scalar_extractElement_FP32(x: Psingle; s: TGrB_Scalar): TGrB_Info; cdecl; external libgraphblas;
function GxB_Scalar_extractElement_FP64(x: Pdouble; s: TGrB_Scalar): TGrB_Info; cdecl; external libgraphblas;
function GxB_Scalar_extractElement_UDT(x: pointer; s: TGrB_Scalar): TGrB_Info; cdecl; external libgraphblas;

type
  PGrB_Vector = ^TGrB_Vector;
  TGrB_Vector = Pointer;

function GrB_Vector_new(v: PGrB_Vector; _type: TGrB_Type; n: TGrB_Index): TGrB_Info; cdecl; external libgraphblas;
function GrB_Vector_dup(w: PGrB_Vector; u: TGrB_Vector): TGrB_Info; cdecl; external libgraphblas;
function GrB_Vector_clear(v: TGrB_Vector): TGrB_Info; cdecl; external libgraphblas;
function GrB_Vector_size(n: PGrB_Index; v: TGrB_Vector): TGrB_Info; cdecl; external libgraphblas;
function GrB_Vector_nvals(nvals: PGrB_Index; v: TGrB_Vector): TGrB_Info; cdecl; external libgraphblas;
function GxB_Vector_type(_type: PGrB_Type; v: TGrB_Vector): TGrB_Info; cdecl; external libgraphblas;
function GxB_Vector_type_name(type_name: pchar; v: TGrB_Vector): TGrB_Info; cdecl; external libgraphblas;
function GxB_Vector_memoryUsage(size: Psize_t; v: TGrB_Vector): TGrB_Info; cdecl; external libgraphblas;
function GxB_Vector_iso(iso: PBoolean; v: TGrB_Vector): TGrB_Info; cdecl; external libgraphblas;
function GrB_Vector_free(v: PGrB_Vector): TGrB_Info; cdecl; external libgraphblas;

function GrB_Vector_build_BOOL(w: TGrB_Vector; I: PGrB_Index; X: PBoolean; nvals: TGrB_Index; dup: TGrB_BinaryOp): TGrB_Info; cdecl; external libgraphblas;
function GrB_Vector_build_INT8(w: TGrB_Vector; I: PGrB_Index; X: Pint8_t; nvals: TGrB_Index; dup: TGrB_BinaryOp): TGrB_Info; cdecl; external libgraphblas;
function GrB_Vector_build_UINT8(w: TGrB_Vector; I: PGrB_Index; X: Puint8_t; nvals: TGrB_Index; dup: TGrB_BinaryOp): TGrB_Info; cdecl; external libgraphblas;
function GrB_Vector_build_INT16(w: TGrB_Vector; I: PGrB_Index; X: Pint16_t; nvals: TGrB_Index; dup: TGrB_BinaryOp): TGrB_Info; cdecl; external libgraphblas;
function GrB_Vector_build_UINT16(w: TGrB_Vector; I: PGrB_Index; X: Puint16_t; nvals: TGrB_Index; dup: TGrB_BinaryOp): TGrB_Info; cdecl; external libgraphblas;
function GrB_Vector_build_INT32(w: TGrB_Vector; I: PGrB_Index; X: Pint32_t; nvals: TGrB_Index; dup: TGrB_BinaryOp): TGrB_Info; cdecl; external libgraphblas;
function GrB_Vector_build_UINT32(w: TGrB_Vector; I: PGrB_Index; X: Puint32_t; nvals: TGrB_Index; dup: TGrB_BinaryOp): TGrB_Info; cdecl; external libgraphblas;
function GrB_Vector_build_INT64(w: TGrB_Vector; I: PGrB_Index; X: Pint64_t; nvals: TGrB_Index; dup: TGrB_BinaryOp): TGrB_Info; cdecl; external libgraphblas;
function GrB_Vector_build_UINT64(w: TGrB_Vector; I: PGrB_Index; X: Puint64_t; nvals: TGrB_Index; dup: TGrB_BinaryOp): TGrB_Info; cdecl; external libgraphblas;
function GrB_Vector_build_FP32(w: TGrB_Vector; I: PGrB_Index; X: Psingle; nvals: TGrB_Index; dup: TGrB_BinaryOp): TGrB_Info; cdecl; external libgraphblas;
function GrB_Vector_build_FP64(w: TGrB_Vector; I: PGrB_Index; X: Pdouble; nvals: TGrB_Index; dup: TGrB_BinaryOp): TGrB_Info; cdecl; external libgraphblas;
function GxB_Vector_build_FC32(w: TGrB_Vector; I: PGrB_Index; X: PGxB_FC32_t; nvals: TGrB_Index; dup: TGrB_BinaryOp): TGrB_Info; cdecl; external libgraphblas;
function GxB_Vector_build_FC64(w: TGrB_Vector; I: PGrB_Index; X: PGxB_FC64_t; nvals: TGrB_Index; dup: TGrB_BinaryOp): TGrB_Info; cdecl; external libgraphblas;
function GrB_Vector_build_UDT(w: TGrB_Vector; I: PGrB_Index; X: pointer; nvals: TGrB_Index; dup: TGrB_BinaryOp): TGrB_Info; cdecl; external libgraphblas;
function GxB_Vector_build_Scalar(w: TGrB_Vector; I: PGrB_Index; scalar: TGrB_Scalar; nvals: TGrB_Index): TGrB_Info; cdecl; external libgraphblas;

function GrB_Vector_setElement_BOOL(w: TGrB_Vector; x: boolean; i: TGrB_Index): TGrB_Info; cdecl; external libgraphblas;
function GrB_Vector_setElement_INT8(w: TGrB_Vector; x: Tint8_t; i: TGrB_Index): TGrB_Info; cdecl; external libgraphblas;
function GrB_Vector_setElement_UINT8(w: TGrB_Vector; x: Tuint8_t; i: TGrB_Index): TGrB_Info; cdecl; external libgraphblas;
function GrB_Vector_setElement_INT16(w: TGrB_Vector; x: Tint16_t; i: TGrB_Index): TGrB_Info; cdecl; external libgraphblas;
function GrB_Vector_setElement_UINT16(w: TGrB_Vector; x: Tuint16_t; i: TGrB_Index): TGrB_Info; cdecl; external libgraphblas;
function GrB_Vector_setElement_INT32(w: TGrB_Vector; x: Tint32_t; i: TGrB_Index): TGrB_Info; cdecl; external libgraphblas;
function GrB_Vector_setElement_UINT32(w: TGrB_Vector; x: Tuint32_t; i: TGrB_Index): TGrB_Info; cdecl; external libgraphblas;
function GrB_Vector_setElement_INT64(w: TGrB_Vector; x: Tint64_t; i: TGrB_Index): TGrB_Info; cdecl; external libgraphblas;
function GrB_Vector_setElement_UINT64(w: TGrB_Vector; x: Tuint64_t; i: TGrB_Index): TGrB_Info; cdecl; external libgraphblas;
function GrB_Vector_setElement_FP32(w: TGrB_Vector; x: single; i: TGrB_Index): TGrB_Info; cdecl; external libgraphblas;
function GrB_Vector_setElement_FP64(w: TGrB_Vector; x: double; i: TGrB_Index): TGrB_Info; cdecl; external libgraphblas;
function GxB_Vector_setElement_FC32(w: TGrB_Vector; x: TGxB_FC32_t; i: TGrB_Index): TGrB_Info; cdecl; external libgraphblas;
function GxB_Vector_setElement_FC64(w: TGrB_Vector; x: TGxB_FC64_t; i: TGrB_Index): TGrB_Info; cdecl; external libgraphblas;
function GrB_Vector_setElement_UDT(w: TGrB_Vector; x: pointer; i: TGrB_Index): TGrB_Info; cdecl; external libgraphblas;
function GrB_Vector_setElement_Scalar(w: TGrB_Vector; x: TGrB_Scalar; i: TGrB_Index): TGrB_Info; cdecl; external libgraphblas;
